# Lolipop

./: README.md  pyproject.toml  requirements.txt
src/lolipop/: __init__.py  __main__.py  main.py
src/lolipop/clients/: git_client.py
src/lolipop/commands/: init.py  project.py  run.py
src/lolipop/handlers/: environment.py  project_init.py  project_tracker.py  script_runner.py
src/lolipop/modules/: app_support.py  config_loader.py  logger.py
